[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["tsukker <tsukker@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.11"
online-judge-tools = "^11.3.1"
online-judge-api-client = "^10.9.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^24.3"
isort = "^5.8.0"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
